# authd

./: .gitignore  .gitmodules  .golangci.yaml  .workshop.yaml  .yamlfmt  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  SECURITY.md  demo.md  go.mod  go.sum  robot.toml
.github/: .jira_sync_config.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-updates.yaml  automatic-doc-checks.yaml  automatic-doc-checks.yml  brokers-qa.yaml  build-broker-snap.yaml  build-deb.yaml  cla-check.yaml  debian-build-test-and-sync.yaml  debian-build.yaml  debian.yaml  e2e-tests-gh-pages-cleanup.yaml  e2e-tests-provision-and-run.yaml  e2e-tests-run.yaml  e2e-tests.yaml  git.yaml  lxd-test-image-cache-refresh.yaml  oci-artifacts-cleanup.yaml  provision-and-run-e2e-tests.yaml  provision-e2e-test.yaml  provision-e2e-vm.yml  qa.yaml  run-e2e-test.yaml  run-e2e-tests.yaml  tics-run.yaml  update-broker-variant-branches.yaml  update-cargo-c.yaml  validate-dependabot.yaml  yamlfmt-check.yaml
.workshop/authd/: sdk.yaml
.workshop/lxd-tunnel/: host-console  host-relay  sdk.yaml
authd-oidc-brokers/: .golangci.yaml  go.mod  go.sum
authd-oidc-brokers/tools/: go.mod  go.sum  install-cargo-c
cmd/authctl/: main.go  main_test.go
debian/: authd.service.in  authd.socket  changelog  control  copyright  get-depends-cargo-bin-path.sh  get-depends-cargo-bin-paths.sh  lintian-overrides  lrc.config  rules  vendor-rust.sh
debian/authd-config/: authd.yaml
debian/source/: lintian-overrides  options
debian/tests/: run-tests.sh
dev/: DEV-GUIDE.md  cloud-init.yaml  dev-env.sh
dev/lib/: common.sh
dev/scripts/: install-authd  install-broker
docs/: .custom_wordlist.txt  conf.py  index.md
docs/explanation/: security.md
docs/howto/: changing-versions.md  configure-authd.md  install-authd.md  logging.md  (+1 more)
e2e-tests/: .gitignore  AGENTS.md  TESTING.md  e2e-tests-google.env.template  e2e-tests-msentraid.env.template  e2e-tests.env  install-deps.sh  run-tests.sh  setup-yarf.sh  testing.md  yarf-console.sh
examplebroker/: broker.go  com.ubuntu.auth.ExampleBroker.xml  dbus.go  users.go
man/: authctl.1
nss/: Cargo.toml
pam/: README.md  main-exec.go  pam.go  pam_authtok_debug.go  pam_session_test.go
po/: sv.po
scripts/: README.md  build-authd-binaries  build-authd-deb  build-broker-binary  build-broker-snap  create-build-dir  generate-vendored-copyright  golangci-lint  gotestcov  journal  lrc  pre-push  prepare-broker-variant-files  regenerate-cargo-lock-file-on-noble  update-xs-vendored-sources
snap/: snapcraft.yaml
specs/: UD125 - Entra ID unix_uid and unix_gid.md
tools/: go.mod  go.sum  tools.go
(+1062 files in other folders)
