[workspace]
members = ["nss/"]
exclude = ["vendor_rust/"]
resolver = "2"

[profile.release]
lto = "thin"

[workspace.metadata.vendor-filter]
platforms = ["*-unknown-linux-gnu"]
tier = "2"
exclude-crate-paths = [
    { name = "*", exclude = "assets" },
    { name = "*", exclude = "docs" },
    { name = "*", exclude = "examples" },
    { name = "*", exclude = "tests" },
    { name = "*", exclude = "*.png" },
    { name = "*", exclude = "*.svg" },

    # Keep this in sync with the excluded paths in debian/source/options
    { name = "*", exclude = ".editor*" },
    { name = "*", exclude = ".git*" },
    { name = "*", exclude = ".go*" },
    { name = "*", exclude = ".mailmap" },
    { name = "*", exclude = ".vscode" },
    { name = "*", exclude = "*.so" },
    { name = "*", exclude = "*.o" },
    { name = "*", exclude = "*.a" },

    # For some reason, this file is excluded from the source tarball. Exclude
    # it here to exclude it from the checksum calculation to avoid build
    # failures due to checksum mismatches.
    { name = "*", exclude = "Cargo.toml.orig" },
]
